# meta-magic_mount-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cliff.toml  clippy.toml  licenserc.toml
.cargo/: config.toml
.github/: bot.py  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  features_request.yml
.github/bot/: bot.py  pyproject.toml
.github/bot/bot/: __init__.py  __main__.py  config.py  gh_helpers.py  github.py  history.py  msg_gen.py  parsing.py  telegram.py  util.py
.github/workflows/: ci.yml  fmt.yml  license_header.yml  lints.yml  release.yml  test.yml
docs/: README.md  README_en.md  README_ru.md
module/: .gitignore  config.toml  config_apatch.toml  customize.sh  mazoku  metainstall.sh  metamount.sh  metauninstall.sh  uninstall.sh  verify.sh
src/: bind_mount.rs  config.rs  defs.rs  errors.rs  main.rs  misc.rs  parser.rs  scanner.rs  utils.rs
src/ksu/: info.rs  magic.rs  mod.rs
src/ksu/try_umount/: kernel.rs
src/magic_mount/: mod.rs  node.rs  utils.rs
src/parser/: mod.rs  mount.rs
src/utils/: ksucalls.rs  mod.rs
src/utils/ksucalls/: try_umount.rs
tests/unit/: bind_mount.rs  config.rs  parser.rs  scanner.rs  utils.rs
update/: changelog.md  update.json
webui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  vite.config.ts
webui/src/: App.tsx  App.vue  app.css  global.d.ts  init.ts  layout.css  main.ts  main.tsx  material-web.d.ts  md3-theme.css  miuix-monet-theme.css  miuix.d.ts  style.css  types.ts
webui/src/components/: BindCard.vue  BottomActions.tsx  ChipInput.css  ChipInput.tsx  Label.vue  MagicLogo.css  MagicLogo.tsx  NavBar.css  NavBar.tsx  RemoveableLabel.vue  Skeleton.css  Skeleton.tsx  StatusCard.vue  Toast.css  Toast.tsx  TopBar.css  TopBar.tsx  logo.vue
webui/src/components/md3/: BottomActions.vue  ChipInput.vue  Skeleton.vue  logo.vue  searchbar.vue
webui/src/components/miuix/: BindCard.vue  IgnoredCard.vue  Label.vue  RemoveableLabel.vue  StatusCard.vue  logo.vue
webui/src/layouts/: Md3Layout.vue  MiuixLayout.vue
webui/src/lib/: api.mock.ts  api.ts  constants.ts  i18n.ts  types.ts
webui/src/lib/composables/: useStyleComponent.ts
webui/src/lib/stores/: configStore.ts  moduleStore.ts  sysStore.ts  uiStore.ts
webui/src/locales/: af.json  ar.json  bg.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  hi.json  hr.json  hu.json  in.json  index.ts  it.json  iw.json  ja.json  ko-rKP.json  ko.json  ku.json  lt.json  lzh.json  nekozh.json  nl.json  no.json  pl.json  pt-rBR.json  pt.json  ro.json  ru.json  si.json  sk.json  sv.json  th.json  (+12 more)
webui/src/md3page/: about.vue  config.vue  modules.vue  status.vue
webui/src/page/: about.vue  config.vue  modules.vue  status.vue
webui/src/routes/: ConfigTab.css  ConfigTab.tsx  InfoTab.css  InfoTab.tsx  ModulesTab.css  ModulesTab.tsx  StatusTab.css  StatusTab.tsx
xtask/: Cargo.toml
xtask/src/: main.rs  zip_ext.rs
