# Copyright (C) 2026 meta-magic_mount-rs developers
# SPDX-License-Identifier: Apache-2.0

[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["signature"] }
fs_extra = "1.3.0"
getrandom = "0.4.2"
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
zip = "8.6.0"
machikado-rs = { git = "https://github.com/VeryBaaad/machikado-rs.git", version = "0.0.4" }
