# Copyright (C) 2026 meta-magic_mount-rs developers
# SPDX-License-Identifier: GPL-v3

[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.6.1", features = ["derive"] }
fs_extra = "1.3.0"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
zip = "8.6.0"
sha2 = "0.11.0"

[lints]
workspace = true
